--- a/src/components/ExpenseItem.css
+++ b/src/components/ExpenseItem.css
@@ -36,6 +36,15 @@
     padding: 0.5rem;
     border-radius: 12px;
   }
+  .exp-item-location{
+    font-size: 1rem;
+    font-weight: bold;
+    color: white;
+    background-color: #40005d;
+    border: 1px solid white;
+    padding: 0.5rem;
+    border-radius: 12px;
+  }
   
   @media (min-width: 580px) {
     .expense-item__description {
