--- a/src/components/ExpenseItem.css
+++ b/src/components/ExpenseItem.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 2px 8px #fcfbfb;
     padding: 0.5rem;
     margin: 1rem 0;
     border-radius: 12px;
@@ -39,9 +39,9 @@
   .exp-item-location{
     font-size: 1rem;
     font-weight: bold;
-    color: white;
-    background-color: #40005d;
-    border: 1px solid white;
+    color: #40005d;
+    background-color: white;
+    border: 2px solid #40005d;
     padding: 0.5rem;
     border-radius: 12px;
   }
